Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- GCE: Added default values for hidden parameters and remove some metaboxes to simplify user experience